--- a/starter/stylesheets/index.scss
+++ b/starter/stylesheets/index.scss
@@ -12,221 +12,221 @@ body {
 
   margin: 0;
   font-family: "Roboto", sans-serif;
-}
 
-h1,
-h2,
-h3,
-h4,
-p {
-  margin: 0;
-}
+  h1,
+  h2,
+  h3,
+  h4,
+  p {
+    margin: 0;
+  }
 
-/* DESKTOP */
-.mobile {
-  display: none;
-}
-
-/* HEADER */
-header {
-  height: 12vh;
-  display: flex !important;
-  width: 94%;
-  margin: 0 auto;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.w-100 {
-  width: 100%;
-}
-
-.nav-desktop {
-  display: flex;
-  width: 33%;
-  justify-content: space-between;
-  font-size: 1.4em;
-  font-weight: 400;
-}
-
-.dropbtn {
-  display: none;
-}
-
-.logo {
-  width: 220px;
-}
-
-a {
-  cursor: pointer;
-}
-
-/* MIDDLE SECTION */
-.section1 {
-  background-image: url("../images/landing.jpg");
-  height: 88vh;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.music-text {
-  width: 60%;
-  text-align: center;
-  position: absolute;
-  color: white;
-  margin-top: -20px;
-}
-
-h1 {
-  font-size: 80px;
-  margin-bottom: 20px;
-  font-weight: 400;
-}
-p {
-  font-size: 30px;
-  font-weight: 300;
-}
-
-/* FOOTER */
-footer {
-  height: 150vh;
-  margin: 3%;
-}
-
-/* SECTION  2*/
-.section2 {
-  background-color: darkorange;
-  height: 68vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.colonnes3 {
-  display: flex;
-  justify-content: space-between;
-}
-
-.w-33 {
-  width: 28%;
-}
-
-img {
-  width: 130px;
-}
-
-/* SECTION  3*/
-.section3 {
-  background-color: mediumvioletred;
-  height: 100vh;
-}
-
-/* MOBILE */
-
-@media only screen and (max-width: 600px) {
-  .desktop {
+  /* DESKTOP */
+  .mobile {
     display: none !important;
   }
-  .mobile {
-    display: block !important;
 
-    /* HEADER */
-    header {
-      height: 12vh;
-      display: flex !important;
-      width: 94%;
-      margin: 0 auto;
-      justify-content: space-between;
-      align-items: center;
+  /* HEADER */
+  header {
+    height: 12vh;
+    display: flex !important;
+    width: 94%;
+    margin: 0 auto;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .w-100 {
+    width: 100%;
+  }
+
+  .nav-desktop {
+    display: flex;
+    width: 33%;
+    justify-content: space-between;
+    font-size: 1.4em;
+    font-weight: 400;
+  }
+
+  .dropbtn {
+    display: none;
+  }
+
+  .logo {
+    width: 220px;
+  }
+
+  a {
+    cursor: pointer;
+  }
+
+  /* MIDDLE SECTION */
+  .section1 {
+    background-image: url("../images/landing.jpg");
+    height: 88vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .music-text {
+    width: 60%;
+    text-align: center;
+    position: absolute;
+    color: white;
+    margin-top: -20px;
+  }
+
+  h1 {
+    font-size: 80px;
+    margin-bottom: 20px;
+    font-weight: 400;
+  }
+  p {
+    font-size: 30px;
+    font-weight: 300;
+  }
+
+  /* FOOTER */
+  footer {
+    height: 150vh;
+    margin: 3%;
+  }
+
+  /* SECTION  2*/
+  .section2 {
+    background-color: darkorange;
+    height: 68vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .colonnes3 {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .w-33 {
+    width: 28%;
+  }
+
+  img {
+    width: 130px;
+  }
+
+  /* SECTION  3*/
+  .section3 {
+    background-color: mediumvioletred;
+    height: 100vh;
+  }
+
+  /* MOBILE */
+
+  @media only screen and (max-width: 600px) {
+    .desktop {
+      display: none !important;
     }
+    .mobile {
+      display: block !important;
 
-    .w-100 {
-      width: 100%;
-    }
+      /* HEADER */
+      header {
+        height: 12vh;
+        display: flex !important;
+        width: 94%;
+        margin: 0 auto;
+        justify-content: space-between;
+        align-items: center;
+      }
 
-    .nav-desktop {
-      display: flex;
-      width: 33%;
-      justify-content: space-between;
-      font-size: 1.4em;
-      font-weight: 400;
-    }
+      .w-100 {
+        width: 100%;
+      }
 
-    .dropbtn {
-      display: none;
-    }
+      .nav-desktop {
+        display: flex;
+        width: 33%;
+        justify-content: space-between;
+        font-size: 1.4em;
+        font-weight: 400;
+      }
 
-    .logo {
-      width: 220px;
-    }
+      .dropbtn {
+        display: none;
+      }
 
-    a {
-      cursor: pointer;
-    }
+      .logo {
+        width: 220px;
+      }
 
-    .dropdown-content {
-      display: flex;
-      width: 33%;
-      justify-content: space-between;
-      font-size: 1.4em;
-      font-weight: 400;
-    }
+      a {
+        cursor: pointer;
+      }
 
-    .nav-mobile  {
-      display: flex;
-      width: 100%;
-      height: 100vh;
-      flex-direction: column;
-      font-size: 1.4em;
-      font-weight: 400;
-    }
+      .dropdown-content {
+        display: flex;
+        width: 33%;
+        justify-content: space-between;
+        font-size: 1.4em;
+        font-weight: 400;
+      }
 
-    .dropbtn {
-      color: black;
-      background-color: #fff;
-      font-size: 16px;
-      border: none;
-      cursor: pointer;
-    }
+      .nav-mobile  {
+        display: flex;
+        width: 100%;
+        height: 100vh;
+        flex-direction: column;
+        font-size: 1.4em;
+        font-weight: 400;
+      }
 
-    .dropbtn {
-      display: block;
-      width: 26px;
-    }
+      .dropbtn {
+        color: black;
+        background-color: #fff;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+      }
 
-    .dropdown {
-      position: relative;
-      display: inline-block;
-    }
+      .dropbtn {
+        display: block;
+        width: 26px;
+      }
 
-    .dropdown-content {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      height: 100vh;
-      background-color: #fff;
-      min-width: 160px;
-      overflow: auto;
-      box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-      z-index: 1;
-      width: 65%;
-    }
+      .dropdown {
+        position: relative;
+        display: inline-block;
+      }
 
-    .dropdown-content a {
-      color: black;
-      padding: 12px 16px;
-      text-decoration: none;
-      display: block;
-    }
+      .dropdown-content {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100vh;
+        background-color: #fff;
+        min-width: 160px;
+        overflow: auto;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        z-index: 1;
+        width: 65%;
+      }
 
-    .show {
-      display: block;
+      .dropdown-content a {
+        color: black;
+        padding: 12px 16px;
+        text-decoration: none;
+        display: block;
+      }
+
+      .show {
+        display: block;
+      }
     }
   }
 }
