--- a/starter/stylesheets/index.scss
+++ b/starter/stylesheets/index.scss
@@ -1,11 +1,4 @@
-/*
-Colors:
-
-Text: 1A1A1A
-Green: #00B172
-White: #FFF
-
-*/
+$Green: #00b172;
 
 body {
   width: 100%;
@@ -31,9 +24,13 @@ body {
     height: 12vh;
     display: flex !important;
     width: 94%;
-    margin: 0 auto;
+    padding: 0 40px;
     justify-content: space-between;
     align-items: center;
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    background-color: #fff;
 
     .w-100 {
       width: 100%;
@@ -63,12 +60,13 @@ body {
     a:hover {
       cursor: pointer;
       text-decoration: none;
-      color: #00b172;
+      color: $Green;
     }
   }
 
-  /* MIDDLE SECTION */
+  /* SECTION 1 */
   .section1 {
+    margin-top: 12vh;
     background-image: url("../images/landing.jpg");
     height: 88vh;
     background-position: center;
@@ -78,57 +76,140 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-  }
 
-  .music-text {
-    width: 60%;
-    text-align: center;
-    position: absolute;
-    color: white;
-    margin-top: -20px;
-  }
+    .music-text {
+      width: 60%;
+      text-align: center;
+      position: absolute;
+      color: white;
+      margin-top: -20px;
+    }
 
-  h1 {
-    font-size: 80px;
-    margin-bottom: 20px;
-    font-weight: 400;
-  }
-  p {
-    font-size: 30px;
-    font-weight: 300;
-  }
-
-  /* FOOTER */
-  footer {
-    height: 150vh;
-    margin: 3%;
+    h1 {
+      font-size: 80px;
+      margin-bottom: 20px;
+      font-weight: 400;
+    }
+    p {
+      font-size: 30px;
+      font-weight: 300;
+    }
   }
 
   /* SECTION  2*/
   .section2 {
-    height: 68vh;
+    margin: 3%;
+    height: 58vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
+
+    h2 {
+      font-size: 40px;
+    }
+    h2:after {
+      content: "";
+      height: 5px;
+      background: $Green;
+      display: block;
+      margin-top: 6px;
+    }
+
+    .colonnes3 {
+      display: flex;
+      justify-content: space-around;
+      height: 100%;
+
+      .w-33 {
+        width: 24%;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+
+        h3 {
+          font-size: 30px;
+          padding: 20px 0;
+          color: $Green;
+        }
+
+        p {
+          font-size: 27px;
+        }
+      }
+
+      img {
+        width: 130px;
+      }
+    }
   }
 
-  .colonnes3 {
+  /* FOOTER */
+  footer {
+    position: relative;
+    margin: 3%;
+    background-color: $Green;
     display: flex;
-    justify-content: space-between;
-  }
+    color: white;
+    padding: 100px;
 
-  .w-33 {
-    width: 28%;
-  }
+    .half {
+      width: 50%;
+    }
 
-  img {
-    width: 130px;
-  }
+    .yeezy {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
 
-  /* SECTION  3*/
-  .section3 {
-    background-color: mediumvioletred;
-    height: 100vh;
+      h2 {
+        font-size: 38px;
+      }
+      h2:after {
+        content: "";
+        height: 4px;
+        background: #fff;
+        display: block;
+        margin-top: 6px;
+        width: 91%;
+      }
+
+      .title {
+        width: 56%;
+
+        h3 {
+          font-size: 30px;
+          padding: 34px 0;
+          color: #fff;
+        }
+
+        p {
+          font-size: 20px;
+        }
+      }
+    }
+
+    .spotify-icon {
+      width: 11%;
+      position: absolute;
+      top: 43%;
+      left: 42%;
+
+      img {
+        width: 100%;
+      }
+    }
+
+    .center {
+      margin: auto;
+      display: flex;
+      justify-content: flex-end;
+
+      .kanye {
+        width: 66%;
+      }
+    }
   }
 
   /* MOBILE */
@@ -138,40 +219,25 @@ body {
       display: none !important;
     }
     .mobile {
-      display: block !important;
-
-      /* HEADER */
-      header {
-        height: 12vh;
-        display: flex !important;
-        width: 94%;
-        margin: 0 auto;
-        justify-content: space-between;
-        align-items: center;
-      }
-
-      .w-100 {
-        width: 100%;
-      }
-
-      .nav-desktop {
-        display: flex;
-        width: 33%;
-        justify-content: space-between;
-        font-size: 1.4em;
-        font-weight: 400;
-      }
-
-      .dropbtn {
-        display: none;
-      }
+      display: flex !important;
+      justify-content: space-around;
+      align-items: center;
+      padding: 0;
+      width: 100%;
 
       .logo {
         width: 220px;
       }
 
-      a {
+      #hamburger-button {
         cursor: pointer;
+        background: none;
+        border: none;
+        font-size: 30px;
+        vertical-align: top;
+        padding: 0;
+        line-height: 47px;
+        float: right;
       }
 
       .dropdown-content {
@@ -180,23 +246,6 @@ body {
         justify-content: space-between;
         font-size: 1.4em;
         font-weight: 400;
-      }
-
-      .nav-mobile  {
-        display: flex;
-        width: 100%;
-        height: 100vh;
-        flex-direction: column;
-        font-size: 1.4em;
-        font-weight: 400;
-      }
-
-      .dropbtn {
-        color: black;
-        background-color: #fff;
-        font-size: 16px;
-        border: none;
-        cursor: pointer;
       }
 
       .dropbtn {
@@ -204,12 +253,8 @@ body {
         width: 26px;
       }
 
-      .dropdown {
-        position: relative;
-        display: inline-block;
-      }
-
       .dropdown-content {
+        margin-top: 12.001vh;
         display: none;
         position: fixed;
         top: 0;
@@ -218,7 +263,8 @@ body {
         background-color: #fff;
         min-width: 160px;
         overflow: auto;
-        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+        border-top: solid 1px black;
+        border-right: solid 1px black;
         z-index: 1;
         width: 65%;
       }
@@ -232,6 +278,103 @@ body {
 
       .show {
         display: block;
+      }
+    }
+
+    .section1 {
+      margin-top: 12vh;
+
+      .music-text {
+        width: 78%;
+        h1 {
+          font-size: 58px;
+          line-height: 58px;
+        }
+        p {
+          font-size: 20px;
+        }
+      }
+    }
+
+    .section2 {
+      height: auto;
+
+      h2 {
+        font-size: 30px;
+        margin-top: 30px;
+      }
+      .colonnes3 {
+        flex-direction: column;
+        align-items: center;
+        height: auto;
+        margin-top: 20px;
+
+        .w-33 {
+          width: 100%;
+          margin: 20px 0;
+
+          h3 {
+            font-size: 20px;
+            padding: 10px;
+          }
+
+          p {
+            font-size: 14px;
+          }
+        }
+
+        img {
+          width: 100px;
+        }
+      }
+    }
+
+    footer {
+      margin-top: 30px;
+      padding: 70px;
+      display: block;
+      margin-bottom: 20px;
+
+      .half {
+        width: 100%;
+      }
+
+      .yeezy {
+        margin-bottom: 30px;
+
+        h2 {
+          font-size: 30px;
+        }
+        h2:after {
+          width: 94%;
+        }
+
+        .title {
+          width: 100%;
+
+          h3 {
+            font-size: 22px;
+            padding: 30px 0;
+          }
+
+          p {
+            font-size: 14px;
+          }
+        }
+      }
+
+      .spotify-icon {
+        width: 20%;
+        top: 50.6%;
+        left: 39%;
+      }
+
+      .kanye {
+        width: 100% !important;
+      }
+
+      .center {
+        margin-top: 140px;
       }
     }
   }
